feat: Add deployment and configuration scripts for on bash

--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,6 @@ content-understanding-samples/
 
 # Include frontend lib folder (not Python's lib/)
 !frontend/src/lib/
+
+# Include infra bash library folder
+!infra/lib/
