--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "python-multipart>=0.0.12",
     "azure-storage-blob>=12.27.1",
     "gunicorn>=21.0.0",
+    "asyncpg>=0.31.0",
+    "tiktoken>=0.12.0",
 ]
 
 [project.optional-dependencies]
