Spec and Tests commit.

--- a/.gitignore
+++ b/.gitignore
@@ -328,6 +328,9 @@ out/
 docs/_build/
 site/
 
+# Research
+mortgage-research/
+
 # ============================================================================
 # Testing & Quality
 # ============================================================================
