batch processing script.

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 # ============================================================================
 .specify/
 .github/
+underwriting-aps-docs/
+batch-review-output/
 
 # ============================================================================
 # Python
