Allow .github/workflows in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 # ============================================================================
 .specify/
 .github/
+!.github/workflows/
 underwriting-aps-docs/
 batch-review-output/
 
