--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 # Project-specific
 # ============================================================================
 .specify/
-.github/
+.github/*
 !.github/workflows/
 underwriting-aps-docs/
 batch-review-output/
