update .gitignore to include additional GitHub directories

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 .specify/
 .github/*
 !.github/workflows/
+!.github/agents/
+!.github/instructions/
+!.github/prompts/
 underwriting-aps-docs/
 batch-review-output/
 
